# irfuplanets

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: pylint.yml  tests.yml
docs/: README_MVN.md
docs/examples/: maven_example.ipynb  mex_ais_example.ipynb
irfuplanets/: __init__.py  data.py  physics.py
irfuplanets/maven/: __init__.py  kp.py  lpw.py  mag.py  maven_sc.py  ngims.py  sdc_interface.py  static.py  swea.py  swia.py
irfuplanets/mex/: __init__.py  mex_sc.py  orbit_plots.py  sub_surface.py
irfuplanets/mex/ais/: __init__.py  ais_code.py  aisreview.py  aistool.py  aisworkflow.py  calibration.py  morgan.py
irfuplanets/planets/: __init__.py
irfuplanets/planets/mars/: __init__.py  boundaries.py  chapman.py  constants.py  field_models.py  field_topology.py
irfuplanets/plot/: __init__.py  plot.py
irfuplanets/spice/: __init__.py  spice.py  update.py
irfuplanets/time/: __init__.py  time.py  time_axes.py
tests/: __init__.py  test_data.py  test_maven.py  test_mex.py  test_plot.py  test_spice.py  test_time.py
